feat(URP): added custom checkstyle rules.